--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
+<link rel="stylesheet" href="./css/style.css">
   </head>
   <body>
     <header>
@@ -25,56 +26,56 @@
     </header>
     <main>
       <ul>
-        <li><button>All</button></li>
-        <li><button>Web Site</button></li>
-        <li><button>App</button></li>
-        <li><button>Design</button></li>
-        <li><button>Marketing</button></li>
+        <li><button type="button">All</button></li>
+        <li><button type="button">Web Site</button></li>
+        <li><button type="button">App</button></li>
+        <li><button type="button">Design</button></li>
+        <li><button type="button">Marketing</button></li>
       </ul>
       <ul>
         <li>
           <img src="./images/portfolio/img.jpg" alt="Banking App Interface Concept" width="360" />
-          <h2>Banking App Interface Concept</h2>
+          <h3>Banking App Interface Concept</h3>
           <p>App</p>
         </li>
         <li>
           <img src="./images/portfolio/img1.jpg" alt="Cashless Payment" width="360" />
-          <h2>Cashless Payment</h2>
+          <h3>Cashless Payment</h3>
           <p>Marketing</p>
         </li>
         <li>
           <img src="./images/portfolio/img2.jpg" alt="Meditation App" width="360" />
-          <h2>Meditation App</h2>
+          <h3>Meditation App</h3>
           <p>App</p>
         </li>
         <li>
           <img src="./images/portfolio/img3.jpg" alt="Taxi Service" width="360" />
-          <h2>Taxi Service</h2>
+          <h3>Taxi Service</h3>
           <p>Marketing</p>
         </li>
         <li>
           <img src="./images/portfolio/img4.jpg" alt="Screen Illustrations" width="360" />
-          <h2>Screen Illustrations</h2>
+          <h3>Screen Illustrations</h3>
           <p>Design</p>
         </li>
         <li>
           <img src="./images/portfolio/img5.jpg" alt="Online Courses" width="360" />
-          <h2>Online Courses</h2>
+          <h3>Online Courses</h3>
           <p>Marketing</p>
         </li>
         <li>
           <img src="./images/portfolio/img6.jpg" alt="Instagram Stories Concept" width="360" />
-          <h2>Instagram Stories Concept</h2>
+          <h3>Instagram Stories Concept</h3>
           <p>Design</p>
         </li>
         <li>
           <img src="./images/portfolio/img7.jpg" alt="Organic Food" width="360" />
-          <h2>Organic Food</h2>
+          <h3>Organic Food</h3>
           <p>Web Site</p>
         </li>
         <li>
           <img src="./images/portfolio/img8.jpg" alt="Fresh Coffee" width="360" />
-          <h2>Fresh Coffee</h2>
+          <h3>Fresh Coffee</h3>
           <p>Web Site</p>
         </li>
       </ul>
