--- a/index.html
+++ b/index.html
@@ -4,93 +4,96 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WebStudio</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
+    <header class="header">
+      <nav class="nav">
+        <a class="link list" href="./index.html">Web<span class="studio-black">Studio</span></a>
 
-        <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+        <ul class="list">
+          <li class="nav-link"><a href="./index.html">Studio</a></li>
+          <li class="nav-link"><a href="./portfolio.html">Portfolio</a></li>
+          <li class="nav-link"><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+      <address class="address">
+        <ul class="list">
+          <li class="list-address list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="list-address list"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
       <!-- hed -->
-      <section>
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+      <section class="head">
+        <h1 class="hed-title">Effective Solutions for Your Business</h1>
+        <button class="btn-hed" type="button">Order Service</button>
       </section>
       <!-- step -->
       <section>
         <h2>мене треба приховати</h2>
-        <ul>
-          <li>
-            <h3>Strategy</h3>
-            <p>Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
+        <ul class="list">
+          <li class="list-snippet-step">
+            <h3 class="list-snipper-name">Strategy</h3>
+            <p class="list-snippet-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
           </li>
-          <li>
-            <h3>Punctuality</h3>
-            <p>Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
+          <li class="list-snippet-step">
+            <h3 class="list-snipper-name">Punctuality</h3>
+            <p class="list-snippet-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
           </li>
-          <li>
-            <h3>Diligence</h3>
-            <p>Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
+          <li class="list-snippet-step">
+            <h3 class="list-snipper-name">Diligence</h3>
+            <p class="list-snippet-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
           </li>
-          <li>
-            <h3>Technologies</h3>
-            <p>Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
+          <li class="list-snippet-step">
+            <h3 class="list-snipper-name">Technologies</h3>
+            <p class="list-snippet-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
           </li>
         </ul>
       </section>
       <!-- What are we doing -->
-      <section>
-        <h2>What are we doing</h2>
-        <ul>
-          <li><img src="./images/work/image3.jpg" alt="monitor" width="360" /></li>
-          <li><img src="./images/work/image2.jpg" alt="mobile soft" width="360" /></li>
-          <li><img src="./images/work/image1.jpg" alt="Operating System" width="360" /></li>
+      <sectio>
+        <h2 class="headline">What are we doing</h2>
+        <ul class="list">
+          <li class="img-snippet"><img src="./images/work/image3.jpg" alt="monitor" width="360" /></li>
+          <li class="img-snippet"><img src="./images/work/image2.jpg" alt="mobile soft" width="360" /></li>
+          <li class="img-snippet"><img src="./images/work/image1.jpg" alt="Operating System" width="360" /></li>
         </ul>
-      </section>
+      </sectio>
       <!-- Our Team -->
       <section>
-        <h2>Our Team</h2>
-        <ul>
-          <li>
+        <h2 class="headline">Our Team</h2>
+        <ul class="list">
+          <li class="img-team">
             <img src="./images/team/mark.jpg" alt="Mark" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="list-snipper-name">Mark Guerrero</h3>
+            <p class="list-snippet-text">Product Designer</p>
           </li>
-          <li>
+          <li class="img-team">
             <img src="./images/team/tom.jpg" alt="Tom" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="list-snipper-name">Tom Ford</h3>
+            <p class="list-snippet-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="img-team">
             <img src="./images/team/camila.jpg" alt="Camila" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="list-snipper-name">Camila Garcia</h3>
+            <p class="list-snippet-text">Marketing</p>
           </li>
-          <li>
+          <li class="img-team">
             <img src="./images/team/daniel.jpg" alt="Daniel" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="list-snipper-name">Daniel Wilson</h3>
+            <p class="list-snippet-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+    <footer class="footer">
+      <a href="./index.html" class="link list">Web<span class="nav-white">Studio</span></a>
+      <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
   </body>
 </html>
