--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,7 @@
       </address>
     </header>
     <main>
+     <section>
       <h1>тебе треба приховати</h1>
       <ul>
         <li class="list-button"><button type="button">All</button></li>
@@ -83,6 +84,7 @@
           <p class="list-snippet-text">Web Site</p>
         </li>
       </ul>
+     </section>
     </main>
     <footer class="footer">
       <a href="./index.html" class="link list">Web<span class="nav-white">Studio</span></a>
