--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <a class="link list" href="./index.html">Web<span class="studio-black">Studio</span></a>
 
         <ul class="list">
-          <li class="nav-link"><a href="./index.html">Studio</a></li>
-          <li class="nav-link"><a href="./portfolio.html">Portfolio</a></li>
-          <li class="nav-link"><a href="">Contacts</a></li>
+          <li class="nav-link link" ><a href="./index.html">Studio</a></li>
+          <li class="nav-link link"><a href="./portfolio.html">Portfolio</a></li>
+          <li class="nav-link link"><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
@@ -59,13 +59,13 @@
       <sectio>
         <h2 class="headline">What are we doing</h2>
         <ul class="list">
-          <li class="img-snippet"><img src="./images/work/image3.jpg" alt="monitor" width="360" /></li>
-          <li class="img-snippet"><img src="./images/work/image2.jpg" alt="mobile soft" width="360" /></li>
-          <li class="img-snippet"><img src="./images/work/image1.jpg" alt="Operating System" width="360" /></li>
+          <li class="img-snippet list"><img src="./images/work/image3.jpg" alt="monitor" width="360" /></li>
+          <li class="img-snippet list"><img src="./images/work/image2.jpg" alt="mobile soft" width="360" /></li>
+          <li class="img-snippet list"><img src="./images/work/image1.jpg" alt="Operating System" width="360" /></li>
         </ul>
       </sectio>
       <!-- Our Team -->
-      <section>
+      <section class="section-team">
         <h2 class="headline">Our Team</h2>
         <ul class="list">
           <li class="img-team">
@@ -92,7 +92,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="link list">Web<span class="nav-white">Studio</span></a>
+      <a class="link list" href="./index.html" class="link list">Web<span class="nav-white">Studio</span></a>
       <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
   </body>
