--- a/portfolio.html
+++ b/portfolio.html
@@ -31,13 +31,13 @@
      <section>
       <h1>тебе треба приховати</h1>
       <ul>
-        <li class="list-button"><button type="button">All</button></li>
-        <li class="list-button"><button type="button">Web Site</button></li>
-        <li class="list-button"><button type="button">App</button></li>
-        <li class="list-button"><button type="button">Design</button></li>
-        <li class="list-button"><button type="button">Marketing</button></li>
+        <li class="list-button"><button class="portfolio-button" type="button">All</button></li>
+        <li class="list-button"><button class="portfolio-button" type="button">Web Site</button></li>
+        <li class="list-button"><button class="portfolio-button" type="button">App</button></li>
+        <li class="list-button"><button class="portfolio-button" type="button">Design</button></li>
+        <li class="list-button"><button class="portfolio-button" type="button">Marketing</button></li>
       </ul>
-      <ul>
+      <ul class="list">
         <li class="list-work-portfolio">
           <img src="./images/portfolio/img.jpg" alt="Banking App Interface Concept" width="360" />
           <h2 class="list-snipper-name">Banking App Interface Concept</h2>
@@ -87,7 +87,7 @@
      </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="link list">Web<span class="nav-white">Studio</span></a>
+      <a class="link list" href="./index.html" class="link list">Web<span class="nav-white">Studio</span></a>
       <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
   </body>
