--- a/index.html
+++ b/index.html
@@ -15,15 +15,15 @@
         <a class="link list" href="./index.html">Web<span class="studio-black">Studio</span></a>
 
         <ul class="list">
-          <li class="nav-link link" ><a href="./index.html">Studio</a></li>
-          <li class="nav-link link"><a href="./portfolio.html">Portfolio</a></li>
-          <li class="nav-link link"><a href="">Contacts</a></li>
+          <li class="nav-link-list link" ><a href="./index.html">Studio</a></li>
+          <li class="nav-link-list link"><a href="./portfolio.html">Portfolio</a></li>
+          <li class="nav-link-list link"><a href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
         <ul class="list">
-          <li class="list-address list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="list-address list"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          <li class="list-address list link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li class="list-address list link"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
