--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <a class="link-slogan list" href="./index.html">Web<span class="studio-black">Studio</span></a>
+        <a class="link-slogan link" href="./index.html">Web<span class="studio-black">Studio</span></a>
 
         <ul class="list">
           <li class="nav-link-list link"><a class="list-link-nav link" href="./index.html">Studio</a></li>
@@ -57,7 +57,7 @@
       </section>
       <!-- What are we doing -->
       <sectio>
-        <h2 class="headline">What are we doing</h2>
+        <h2 class="head-line">What are we doing</h2>
         <ul class="list">
           <li class="img-snippet list"><img src="./images/work/image3.jpg" alt="monitor" width="360" /></li>
           <li class="img-snippet list"><img src="./images/work/image2.jpg" alt="mobile soft" width="360" /></li>
