--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </section>
     </main>
     <footer class="footer">
-      <a class="link list" href="./index.html" class="link list">Web<span class="nav-white">Studio</span></a>
+      <a class="link-slogan link" href="./index.html">Web<span class="nav-white">Studio</span></a>
       <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
   </body>
