--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <a class="link list" href="./index.html" >Web<span class="studio-black">Studio</span></a>
+        <a class="link-slogan link" href="./index.html" >Web<span class="studio-black">Studio</span></a>
 
         <ul  class="list">
           <li class="nav-link"><a href="./index.html">Studio</a></li>
@@ -87,7 +87,7 @@
      </section>
     </main>
     <footer class="footer">
-      <a class="link list" href="./index.html">Web<span class="nav-white">Studio</span></a>
+      <a class="link-slogan link" href="./index.html">Web<span class="nav-white">Studio</span></a>
       <p class="text-footer">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </footer>
   </body>
