--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </sectio>
       <!-- Our Team -->
       <section class="section-team">
-        <h2 class="headline">Our Team</h2>
+        <h2 class="head-line">Our Team</h2>
         <ul class="list">
           <li class="img-team">
             <img src="./images/team/mark.jpg" alt="Mark" width="264" />
