--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       </section>
       <!-- What are we doing -->
       <sectio>
-        <h2 class="head-line">What are we doing</h2>
+        <h2 class="section-title">What are we doing</h2>
         <ul class="list">
           <li class="img-snippet list"><img src="./images/work/image3.jpg" alt="monitor" width="360" /></li>
           <li class="img-snippet list"><img src="./images/work/image2.jpg" alt="mobile soft" width="360" /></li>
