--- a/portfolio.html
+++ b/portfolio.html
@@ -12,25 +12,25 @@
   <body>
     <header class="header">
       <nav class="nav">
-        <a class="link-slogan link" href="./index.html" >Web<span class="studio-black">Studio</span></a>
+        <a class="link-slogan link" href="./index.html">Web<span class="studio-black">Studio</span></a>
 
-        <ul  class="list">
-          <li class="nav-link"><a href="./index.html">Studio</a></li>
-          <li class="nav-link"><a href="./portfolio.html">Portfolio</a></li>
-          <li class="nav-link"><a href="">Contacts</a></li>
+        <ul class="list">
+          <li class="nav-link-list link"><a class="list-link-nav link" href="./index.html">Studio</a></li>
+          <li class="nav-link-list link"><a class="list-link-nav link" href="./portfolio.html">Portfolio</a></li>
+          <li class="nav-link-list link"><a class="list-link-nav link" href="">Contacts</a></li>
         </ul>
       </nav>
       <address class="address">
-        <ul  class="list">
-          <li class="list-address list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="list-address list"><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        <ul class="list">
+          <li><a class="list-address list link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a class="list-address list link" href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
     <main>
      <section>
       <h1>тебе треба приховати</h1>
-      <ul>
+      <ul class="list">
         <li class="list-button"><button class="portfolio-button" type="button">All</button></li>
         <li class="list-button"><button class="portfolio-button" type="button">Web Site</button></li>
         <li class="list-button"><button class="portfolio-button" type="button">App</button></li>
@@ -39,49 +39,67 @@
       </ul>
       <ul class="list">
         <li class="list-work-portfolio">
-          <img src="./images/portfolio/img.jpg" alt="Banking App Interface Concept" width="360" />
-          <h2 class="list-snipper-name">Banking App Interface Concept</h2>
-          <p class="list-snippet-text">App</p>
+          <a>
+            <img src="./images/portfolio/img.jpg" alt="Banking App Interface Concept" width="360" />
+            <h2 class="list-snipper-name">Banking App Interface Concept</h2>
+            <p class="list-snippet-text">App</p>
+          </a>
         </li>
         <li class="list-work-portfolio">
+         <a>
           <img src="./images/portfolio/img1.jpg" alt="Cashless Payment" width="360" />
           <h2 class="list-snipper-name">Cashless Payment</h2>
           <p class="list-snippet-text">Marketing</p>
+         </a>
         </li>
         <li class="list-work-portfolio">
+         <a>
           <img src="./images/portfolio/img2.jpg" alt="Meditation App" width="360" />
           <h2 class="list-snipper-name">Meditation App</h2>
           <p class="list-snippet-text">App</p>
+         </a>
         </li>
         <li class="list-work-portfolio">
+         <a>
           <img src="./images/portfolio/img3.jpg" alt="Taxi Service" width="360" />
           <h2 class="list-snipper-name">Taxi Service</h2>
           <p class="list-snippet-text">Marketing</p>
+         </a>
         </li>
         <li class="list-work-portfolio">
+         <a>
           <img src="./images/portfolio/img4.jpg" alt="Screen Illustrations" width="360" />
           <h2 class="list-snipper-name">Screen Illustrations</h2>
           <p class="list-snippet-text">Design</p>
+         </a>
         </li>
         <li class="list-work-portfolio">
-          <img src="./images/portfolio/img5.jpg" alt="Online Courses" width="360" />
+          <a>
+            <img src="./images/portfolio/img5.jpg" alt="Online Courses" width="360" />
           <h2 class="list-snipper-name">Online Courses</h2>
           <p class="list-snippet-text">Marketing</p>
+          </a>
         </li>
         <li class="list-work-portfolio">
+         <a>
           <img src="./images/portfolio/img6.jpg" alt="Instagram Stories Concept" width="360" />
           <h2 class="list-snipper-name">Instagram Stories Concept</h2>
           <p class="list-snippet-text">Design</p>
+         </a>
         </li>
         <li class="list-work-portfolio">
+         <a>
           <img src="./images/portfolio/img7.jpg" alt="Organic Food" width="360" />
           <h2 class="list-snipper-name">Organic Food</h2>
           <p class="list-snippet-text">Web Site</p>
+         </a>
         </li>
         <li class="list-work-portfolio">
-          <img src="./images/portfolio/img8.jpg" alt="Fresh Coffee" width="360" />
-          <h2 class="list-snipper-name">Fresh Coffee</h2>
-          <p class="list-snippet-text">Web Site</p>
+       <a>
+        <img src="./images/portfolio/img8.jpg" alt="Fresh Coffee" width="360" />
+        <h2 class="list-snipper-name">Fresh Coffee</h2>
+        <p class="list-snippet-text">Web Site</p>
+       </a>
         </li>
       </ul>
      </section>
