--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       </section>
       <!-- What are we doing -->
       <sectio>
-        <h2 class="section-title">What are we doing</h2>
-        <ul class="list">
-          <li ><img src="./images/work/image3.jpg" alt="monitor" width="360" /></li>
-          <li ><img src="./images/work/image2.jpg" alt="mobile soft" width="360" /></li>
-          <li ><img src="./images/work/image1.jpg" alt="Operating System" width="360" /></li>
+        <h2 class="text-foot-two">What are we doing</h2>
+        <ul >
+          <li class="list"><img src="./images/work/image3.jpg" alt="monitor" width="360" /></li>
+          <li class="list"><img src="./images/work/image2.jpg" alt="mobile soft" width="360" /></li>
+          <li class="list"><img src="./images/work/image1.jpg" alt="Operating System" width="360" /></li>
         </ul>
       </sectio>
       <!-- Our Team -->
