--- a/index.html
+++ b/index.html
@@ -56,14 +56,14 @@
         </ul>
       </section>
       <!-- What are we doing -->
-      <sectio>
+      <section>
         <h2 class="text-foot-two">What are we doing</h2>
         <ul >
           <li class="list"><img src="./images/work/image3.jpg" alt="monitor" width="360" /></li>
           <li class="list"><img src="./images/work/image2.jpg" alt="mobile soft" width="360" /></li>
           <li class="list"><img src="./images/work/image1.jpg" alt="Operating System" width="360" /></li>
         </ul>
-      </sectio>
+      </section>
       <!-- Our Team -->
       <section class="section-team">
         <h2 class="head-line">Our Team</h2>
