--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       <!-- What are we doing -->
       <section>
         <h2 class="text-foot-two">What are we doing</h2>
-        <ul >
+        <ul class="list">
           <li class="list"><img src="./images/work/image3.jpg" alt="monitor" width="360" /></li>
           <li class="list"><img src="./images/work/image2.jpg" alt="mobile soft" width="360" /></li>
           <li class="list"><img src="./images/work/image1.jpg" alt="Operating System" width="360" /></li>
