--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       </section>
       <!-- step -->
       <section>
-        <h2>мене треба приховати</h2>
+        <h2>hide me</h2>
         <ul class="list">
           <li class="list-snippet-step">
             <h3 class="list-snipper-name">Strategy</h3>
