--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
     </header>
     <main>
      <section>
-      <h1>тебе треба приховати</h1>
+      <h1>hide me</h1>
       <ul class="list">
         <li class="list-button"><button class="portfolio-button" type="button">All</button></li>
         <li class="list-button"><button class="portfolio-button" type="button">Web Site</button></li>
